--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <h3>Computer Science Research Assistant</h3>
             <p><em>Macalester College NSF Funded Research</em></p>
             <ul>
-                <li>Co-design workshop content for non-programmers, utilizing HTML,CSS, JavaScript, and Python for web-based materials.</li>
-                <li>Develop assessment tools for measuring the computational literacy of marginalized individuals of the Twin Cities.</li>
+                <li>Co-design workshop content for non-programmers, utilizing HTML,CSS, and JavaScript for web-based materials.</li>
+                <li>Develop assessment tools for measuring the computational literacy of communities in the Twin Cities.</li>
                 <li>Conduct literature reviews, data analysis, and support community outreach efforts for career development.</li>
             </ul>
         </article>
@@ -136,7 +136,7 @@
         <br>
         <ul>
             <li> Google Latinx Student Leadership Summit 2024 Alumn</li>
-            <li>Computer Skills: Python, R Studio, Java, HTML, CSS, and Scratch  </li> 
+            <li>Computer Skills: Python, R, Java, HTML, CSS, and JavaScript  </li> 
             <li> Languages: Fluent in Spanish, English, and high-intermediate in French</li>
              <li>Event Planning, Team Collaboration, Direct Communication, and Cultural Sensitivity</li>    
         </ul>
